--- a/example-backend/dockerfile_backend
+++ b/example-backend/dockerfile_backend
@@ -4,6 +4,6 @@ COPY go.mod ./
 COPY go.sum ./
 RUN go mod install
 COPY *.go ./
-RUN go build -o /docker-gs-ping
+RUN go build -o /server
 EXPOSE 8080
-CMD ["/docker-gs-ping"]
+CMD ["/server"]
